--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <nav>
         <a href="#" class="logo">
-            <img src="InTheCarCinema.PNG" height="70px">
+            <img src="InTheCarCinema.png" height="70px">
         </a>
         <input type="checkbox" class="menu-btn" id="menu-btn"/>
         <label class="menu-icon" for="menu-btn">
