--- a/index.html
+++ b/index.html
@@ -57,42 +57,42 @@
                 <ul id="autoWidth" class="cs-hidden">
                     <li class="item-a">
                         <div class="showcase-box">
-                            <img src="Image 1.JPG">
+                            <img src="Image 1.jpg">
                         </div>
                     </li>
                     <li class="item-b">
                         <div class="showcase-box">
-                            <img src="Image 2.PNG">
+                            <img src="Image 2.png">
                         </div>
                     </li>
                     <li class="item-c">
                         <div class="showcase-box">
-                            <img src="Image 3.JPG">
+                            <img src="Image 3.jpg">
                         </div>
                     </li>
                     <li class="item-d">
                         <div class="showcase-box">
-                            <img src="Image 4.JPG">
+                            <img src="Image 4.jpg">
                         </div>
                     </li>
                     <li class="item-e">
                         <div class="showcase-box">
-                            <img src="Image 5.JPG">
+                            <img src="Image 5.jpg">
                         </div>
                     </li>
                     <li class="item-f">
                         <div class="showcase-box">
-                            <img src="Image 6.JPG">
+                            <img src="Image 6.jpg">
                         </div>
                     </li>
                     <li class="item-g">
                         <div class="showcase-box">
-                            <img src="Image 7.JPG">
+                            <img src="Image 7.jpg">
                         </div>
                     </li>
                     <li class="item-h">
                         <div class="showcase-box">
-                            <img src="Image 8.JPG">
+                            <img src="Image 8.jpg">
                         </div>
                     </li>
                   </ul>
@@ -118,7 +118,7 @@
                     <li class="item-a">
                         <div class="latest-box">
                             <div class="latest-b-img">
-                                <img src="img 2.JPG">
+                                <img src="img 2.jpg">
                             </div>
                             <div class="latest-b-text">
                                 <strong>The Mitchells us the Machines</strong>
@@ -129,7 +129,7 @@
                     <li class="item-a">
                         <div class="latest-box">
                             <div class="latest-b-img">
-                                <img src="img 3.JPG">
+                                <img src="img 3.jpg">
                             </div>
                             <div class="latest-b-text">
                                 <strong>The paper tigers</strong>
@@ -140,7 +140,7 @@
                     <li class="item-a">
                         <div class="latest-box">
                             <div class="latest-b-img">
-                                <img src="img 4.JPG">
+                                <img src="img 4.jpg">
                             </div>
                             <div class="latest-b-text">
                                 <strong>My heart can't beat unless you tell it to</strong>
@@ -151,7 +151,7 @@
                     <li class="item-a">
                         <div class="latest-box">
                             <div class="latest-b-img">
-                                <img src="img 5.JPG">
+                                <img src="img 5.jpg">
                             </div>
                             <div class="latest-b-text">
                                 <strong>Raya and the last dragon</strong>
@@ -173,7 +173,7 @@
                     <li class="item-a">
                         <div class="latest-box">
                             <div class="latest-b-img">
-                                <img src="img 7.JPG">
+                                <img src="img 7.jpg">
                             </div>
                             <div class="latest-b-text">
                                 <strong>Back to the future the musical</strong>
@@ -184,7 +184,7 @@
                     <li class="item-a">
                         <div class="latest-box">
                             <div class="latest-b-img">
-                                <img src="img8.JPG">
+                                <img src="img8.jpg">
                             </div>
                             <div class="latest-b-text">
                                 <strong>Birds of Prey</strong>
@@ -250,41 +250,33 @@
             </div>
             <div class="movies-box">
                 <div class="movies-img">
-                    <!--put any image of movies-->
                     <img src="img15.png">
                 </div>
                 <a href="#">
-                    <!--text anything about that movies-->
                     angry birds (U)
                 </a>
             </div>
             <div class="movies-box">
                 <div class="movies-img">
-                    <!--put any image of movies-->
                     <img src="img16.jpg">
                 </div>
                 <a href="#">
-                    <!--text anything about that movies-->
                     avengers (+12)
                 </a>
             </div>
             <div class="movies-box">
                 <div class="movies-img">
-                    <!--put any image of movies-->
                     <img src="img17.jpg">
                 </div>
                 <a href="#">
-                    <!--text anything about that movies-->
                     the flash (+16)
                 </a>
             </div>
             <div class="movies-box">
                 <div class="movies-img">
-                    <!--put any image of movies-->
                     <img src="img18.jpg">
                 </div>
                 <a href="#">
-                    <!--text anything about that movies-->
                     arrow (+16)
                 </a>
             </div>
