--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <li class="item-a">
                         <div class="latest-box">
                             <div class="latest-b-img">
-                                <img src="img 1.JPG">
+                                <img src="img 1.jpg">
                             </div>
                             <div class="latest-b-text">
                                 <strong>Squid game</strong>
