--- a/index.html
+++ b/index.html
@@ -72,27 +72,27 @@
                     </li>
                     <li class="item-d">
                         <div class="showcase-box">
-                            <img src="Image 4.jpg">
+                            <img src="image 4.jpg">
                         </div>
                     </li>
                     <li class="item-e">
                         <div class="showcase-box">
-                            <img src="Image 5.jpg">
+                            <img src="image 5.jpg">
                         </div>
                     </li>
                     <li class="item-f">
                         <div class="showcase-box">
-                            <img src="Image 6.jpg">
+                            <img src="image 6.jpg">
                         </div>
                     </li>
                     <li class="item-g">
                         <div class="showcase-box">
-                            <img src="Image 7.jpg">
+                            <img src="image 7.jpg">
                         </div>
                     </li>
                     <li class="item-h">
                         <div class="showcase-box">
-                            <img src="Image 8.jpg">
+                            <img src="image 8.jpg">
                         </div>
                     </li>
                   </ul>
