--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
 
-<link rel="shortcut icon" href="InTheCarCinema.PNG"/>
+<link rel="shortcut icon" href="InTheCarCinema.png"/>
 <script src="https://icons.getbootstrap.com/icons/search/" crossorigin="anonymous"></script>
 </head>
 <body>
