--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
 
 
-<link rel="shortcut icon" href="InTheCarCinema.png"/>
+<link rel="shortcut icon" href="InTheCarCinema.PNG"/>
 <script src="https://icons.getbootstrap.com/icons/search/" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav>
         <a href="#" class="logo">
-            <img src="InTheCarCinema.png" height="70px">
+            <img src="InTheCarCinema.PNG" height="70px">
         </a>
         <input type="checkbox" class="menu-btn" id="menu-btn"/>
         <label class="menu-icon" for="menu-btn">
