--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>In The Car Cinema</title>
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/lightslider.css">
+<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
 
 <!--if that dosent work just delete it-->
 <script src="js/script.js"></script>>
