--- a/more.html
+++ b/more.html
@@ -46,44 +46,43 @@
         <br><br><br><br><br>
         <h1>Booking Ticked</h1>
         <div class="t1">
-          <table>
+          <style>
+            table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+  color: black;
+}
+          </style>
+          <table style="width:100%">
+            <tr>
+              <th>how many people</th>
+              <th>price</th> 
+              <th>Age</th>
+            </tr>
             <tr>
               <td>1</td>
-              <td>2</td>
-              <td>3</td>
-              <td>4</td>
-              <td>5</td>
-              <td>6</td>
-              <td>7</td>
+              <td>£10</td>
+              <td>10-16</td>
             </tr>
             <tr>
-              <td>8</td>
-              <td>9</td>
-              <td>10</td>
-              <td>11</td>
-              <td>12</td>
-              <td>13</td>
-              <td>14</td>
+              <td>1</td>
+              <td>£12</td>
+              <td>16-20</td>
             </tr>
             <tr>
-              <td>15</td>
-              <td>16</td>
-              <td>17</td>
-              <td>18</td>
-              <td>19</td>
-              <td>20</td>
-              <td>21</td>
+              <td>1</td>
+              <td>£15</td>
+              <td>20 or above</td>
             </tr>
             <tr>
-              <td>22</td>
-              <td>23</td>
-              <td>24</td>
-              <td>25</td>
-              <td>26</td>
-              <td>27</td>
-              <td>28</td>
+              <td>1</td>
+              <td>£30</td>
+              <td>family</td>
             </tr>
           </table>
+        </div>
+        <div>
+          <li><a href="booking.html">BOOKING NOW</a></li>
         </div>
 </body>
 </html>
