--- a/playing.html
+++ b/playing.html
@@ -51,6 +51,17 @@
                 Wisecracking mercenary Deadpool meets Russell, an angry teenage mutant who lives at an orphanage. When Russell becomes the target of Cable -- a genetically enhanced soldier from the future -- Deadpool realizes that he'll need some help saving the boy from such a superior enemy. He soon joins forces with Bedlam, Shatterstar, Domino and other powerful mutants to protect young Russell from Cable and his advanced weaponry.</p>
             <a href="https://www.youtube.com/watch?v=D86RtevtfrA">link</a>
 
+            <iframe src="https://www.youtube.com/embed/y6ZW7KXaXYk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p>Deadpool 2 trailer (+18)</p>
+            <p>What is the movie Deadpool 2 about?
+                Wisecracking mercenary Deadpool meets Russell, an angry teenage mutant who lives at an orphanage. When Russell becomes the target of Cable -- a genetically enhanced soldier from the future -- Deadpool realizes that he'll need some help saving the boy from such a superior enemy. He soon joins forces with Bedlam, Shatterstar, Domino and other powerful mutants to protect young Russell from Cable and his advanced weaponry.</p>
+            <a href="https://www.youtube.com/embed/y6ZW7KXaXYk">link</a>
+
+            <iframe src="https://www.youtube.com/embed/D86RtevtfrA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p>Deadpool 2 trailer (+18)</p>
+            <p>What is the movie Deadpool 2 about?
+                Wisecracking mercenary Deadpool meets Russell, an angry teenage mutant who lives at an orphanage. When Russell becomes the target of Cable -- a genetically enhanced soldier from the future -- Deadpool realizes that he'll need some help saving the boy from such a superior enemy. He soon joins forces with Bedlam, Shatterstar, Domino and other powerful mutants to protect young Russell from Cable and his advanced weaponry.</p>
+            <a href="https://www.youtube.com/watch?v=D86RtevtfrA">link</a>
         </div>
 </body>
 </html>
