--- a/coming.html
+++ b/coming.html
@@ -50,6 +50,18 @@
             <p>What is the story of Arcane?
                 Premise. Amidst the escalating unrest between the advanced, utopian city of Piltover and the squalid, repressed undercity of Zaun, sisters Vi and Jinx find themselves on opposing sides of a war over twisted ideologies and arcane technology.</p>
 
+                <iframe src="https://www.youtube.com/embed/y6ZW7KXaXYk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p>Harry Potter (+12)</p>
+            <p>What is the movie Harry Potter 2007 about?
+                Harry Potter and Dumbledore's warning about the return of Lord Voldemort is not heeded by the wizard authorities who, in turn, look to undermine Dumbledore's authority at Hogwarts and discredit Harry.</p>
+            <a href="https://www.youtube.com/embed/y6ZW7KXaXYk">link</a>
+
+            <iframe src="https://www.youtube.com/embed/6CKcqIahedc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p>Brave (+4)</p>
+            <p>What is the movie Brave about?
+                Merida, an independent archer, disobeys an ancient custom which unleashes a dark force. After meeting an elderly witch, as she journeys to reverse the curse, she discovers the real meaning of bravery.</p>
+            <a href="https://www.youtube.com/embed/6CKcqIahedc">link</a>
+
         </div>
 </body>
 </html>
