--- a/more.html
+++ b/more.html
@@ -49,7 +49,7 @@
           <table class="table-book">
             <thead>
               <tr>
-                <th>ticked</th>
+                <th>ticket</th>
                 <th>start / end time</th>
                 <th>price</th>
                 <th>batch status</th>
@@ -58,21 +58,21 @@
             </thead>
             <tbody>
               <tr>
-                <td data-label="ticked">one ticked for kid</td>
+                <td data-label="ticket">one ticked for kid</td>
                 <td data-label="start / end time">09:00 - 22:00 (IST)</td>
                 <td data-label="price">£5</td>
                 <td data-label="batch status"><span class="text_open">[ open ]</span></td>
                 <td data-label="#"><a href="booking.html" class="btn">pay now</a></td>
               </tr>
               <tr>
-                <td data-label="ticked">one tickerd for adult</td>
+                <td data-label="ticket">one tickerd for adult</td>
                 <td data-label="start / end time">09:00 - 22:00 (IST)</td>
                 <td data-label="price">£10</td>
                 <td data-label="batch status"><span class="text_open">[ open ]</span></td>
                 <td data-label="#"><a href="booking.html" class="btn">pay now</a></td>
               </tr>
               <tr>
-                <td data-label="ticked">one ticked for family</td>
+                <td data-label="ticket">one ticked for family</td>
                 <td data-label="start / end time">09:00 - 22:00 (IST)</td>
                 <td data-label="price">£20</td>
                 <td data-label="batch status"><span class="text_open">[ open ]</span></td>
