the poblem is fixed

--- a/booking.html
+++ b/booking.html
@@ -113,12 +113,11 @@
             <div class="col-25">
               <div class="container">
                 <h4>Cart <span class="price" style="color:black"><i class="fa fa-shopping-cart"></i> <b>4</b></span></h4>
-                <p><a href="#">1 ticked for 10-16</a> <span class="price">£10</span></p>
-                <p><a href="#">1 ticked for 16-20</a> <span class="price">£12</span></p>
-                <p><a href="#">1 ticked for 20 or above</a> <span class="price">£15</span></p>
-                <p><a href="#">1 ticked for family</a> <span class="price">£30</span></p>
+                <p><a href="#">one ticket for kid</a> <span class="price">£5</span></p>
+                <p><a href="#">one ticket for adult</a> <span class="price">£10</span></p>
+                <p><a href="#">one ticket for family </a> <span class="price">£20</span></p>
                 <hr>
-                <p>Total <span class="price" style="color:black"><b>£67</b></span></p>
+                <p>Total <span class="price" style="color:black"><b>£35</b></span></p>
               </div>
             </div>
           </div>
