--- a/more.html
+++ b/more.html
@@ -58,21 +58,21 @@
             </thead>
             <tbody>
               <tr>
-                <td data-label="ticket">one ticked for kid</td>
+                <td data-label="ticket">one ticket for kid</td>
                 <td data-label="start / end time">09:00 - 22:00 (IST)</td>
                 <td data-label="price">£5</td>
                 <td data-label="batch status"><span class="text_open">[ open ]</span></td>
                 <td data-label="#"><a href="booking.html" class="btn">pay now</a></td>
               </tr>
               <tr>
-                <td data-label="ticket">one tickerd for adult</td>
+                <td data-label="ticket">one ticket for adult</td>
                 <td data-label="start / end time">09:00 - 22:00 (IST)</td>
                 <td data-label="price">£10</td>
                 <td data-label="batch status"><span class="text_open">[ open ]</span></td>
                 <td data-label="#"><a href="booking.html" class="btn">pay now</a></td>
               </tr>
               <tr>
-                <td data-label="ticket">one ticked for family</td>
+                <td data-label="ticket">one ticket for family</td>
                 <td data-label="start / end time">09:00 - 22:00 (IST)</td>
                 <td data-label="price">£20</td>
                 <td data-label="batch status"><span class="text_open">[ open ]</span></td>
