--- a/more.html
+++ b/more.html
@@ -47,13 +47,13 @@
         <div class="table-booking">
           <h1 class="hbooking">Time and Price table</h1>
           <table class="table-book">
-            <thead>
+            <thead class="booking-text">
               <tr>
                 <th>ticket</th>
                 <th>start / end time</th>
                 <th>price</th>
                 <th>batch status</th>
-                <th>#</th>
+                <th>pay</th>
               </tr>
             </thead>
             <tbody>
